; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_on_enter_status.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_on_enter_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_status_configurator = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @on_enter_status(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.st_status_configurator*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.st_status_configurator*
  store %struct.st_status_configurator* %10, %struct.st_status_configurator** %7, align 8
  %11 = load %struct.st_status_configurator*, %struct.st_status_configurator** %7, align 8
  %12 = getelementptr inbounds %struct.st_status_configurator, %struct.st_status_configurator* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
